# nsa_diffusion

./: .gitignore  EXPERIMENTS.md  README.md  environment.yml  nsa_diff_blueprint.md  pyproject.toml
.claude/: settings.local.json
configs/: __init__.py  defaults.py
scripts/: evaluate.py  inspect_model.py  run_baselines.sh  train.py
src/decomposition/: cp_decompose.py  factor_cache.py  student_builder.py
src/evaluation/: benchmark.py  fid.py  sample.py
src/hooks/: activation_capture.py
src/losses/: composite.py  conditional_nsa.py  distillation.py  nsa_loss.py  orthogonality.py
src/training/: data.py  ema.py  trainer.py
src/utils/: device.py  logging_utils.py  unet_inspect.py
tests/: test_cp_decompose.py  test_hooks.py  test_losses.py  test_student_builder.py  test_training_step.py
